--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -47,6 +47,7 @@ jobs:
       run: |
         docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:latest .
 
+    ## Pushing Docker Image
     - name: 'Push Docker image'
       run: |
         docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:latest
