--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -49,6 +49,10 @@ jobs:
       run: |
         docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:latest .
 
+    - name: 'Authenticate Docker with GCR'
+      run: |
+        gcloud auth configure-docker
+
     ## Pushing Docker Image
     - name: 'Push Docker image'
       run: |
