--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -58,9 +58,17 @@ jobs:
       run: |
         docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:latest
 
+    - name: Install gke-gcloud-auth-plugin
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+        gcloud components install gke-gcloud-auth-plugin
+        gcloud components update
+
     - name: 'Get GKE Credentials'
       run: |
-        gcloud container clusters get-credentials github-cluster-1 --region us-central1 --project fenixwork-projects
+        gcloud container clusters get-credentials github-cluster-1 --region us-central1 --project ${{ secrets.GCP_PROJECT_ID }}
+
 
     - name: 'Set up kubectl'
       uses: 'azure/setup-kubectl@v3'
