--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -51,9 +51,7 @@ jobs:
 
     - name: 'Authenticate Docker with GCR'
       run: |
-        echo ${{ secrets.GCP_SA_KEY }} | docker login -u _json_key --password-stdin https://gcr.io
-
-        # gcloud auth configure-docker
+        gcloud auth configure-docker
 
     ## Pushing Docker Image
     - name: 'Push Docker image'
