--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -60,10 +60,15 @@ jobs:
 
     - name: Install gke-gcloud-auth-plugin
       run: |
-        sudo apt-get update && sudo apt-get install -y apt-transport-https ca-certificates gnupg
-        echo "deb https://packages.cloud.google.com/apt gcloud-gke-gcloud-auth-plugin main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
-        curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
-        sudo apt-get update && sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+        gcloud components update
+        gcloud components install gke-gcloud-auth-plugin
+
+    # - name: Install gke-gcloud-auth-plugin
+    #   run: |
+    #     sudo apt-get update && sudo apt-get install -y apt-transport-https ca-certificates gnupg
+    #     echo "deb https://packages.cloud.google.com/apt gcloud-gke-gcloud-auth-plugin main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+    #     curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+    #     sudo apt-get update && sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
 
     - name: 'Get GKE Credentials'
       run: |
