--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -84,3 +84,6 @@ jobs:
       run: |
         kubectl apply -f k8s/deployment.yaml
         kubectl apply -f k8s/service.yaml
+
+      env:
+          GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
