--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: my-app
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: my-app
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app:latest
+        image: gcr.io/${GCP_PROJECT_ID}/my-app:latest
         ports:
         - containerPort: 8080
