Set env variable for GCP PROJECT

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: gcr.io/${GCP_PROJECT_ID}/my-app:latest
+        image: gcr.io/fenixwork-projects/my-app:latest
         ports:
         - containerPort: 8080
