--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -70,6 +70,12 @@ jobs:
     #     curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
     #     sudo apt-get update && sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
 
+    ## Add step for creation gke cluster
+    # - name: 'Create GKE Cluster'
+    #   run: |
+    #     gcloud container clusters create-auto github-cluster-1 --region us-central1 --project ${{ secrets.GCP_PROJECT_ID }}
+
+
     - name: 'Get GKE Credentials'
       run: |
         gcloud container clusters get-credentials github-cluster-1 --region us-central1 --project ${{ secrets.GCP_PROJECT_ID }}
