--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-app-service
+  name: my-app-2-service
 spec:
   selector:
-    app: my-app
+    app: my-app-2
   ports:
     - protocol: TCP
       port: 80
